# facerec

./: Cargo.toml  face_data.json
src/: main.rs
