[package]
name = "facer"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv = "0.94.2" # OpenCV für Gesichtserkennung
tch = "0.10"  # Rust-Bindings für PyTorch
serde = { version = "1.0", features = ["derive"] }  # Serialisierung
serde_json = "1.0"  # Speicherung der Gesichtsdaten
uuid = { version = "1.3", features = ["v4"] }  # Eindeutige ID für User